tests/test5.txt
=========================================================================================================================================== test session starts ===========================================================================================================================================
platform win32 -- Python 3.13.7, pytest-9.0.3, pluggy-1.6.0
rootdir: E:\Projects\Raspisanie
plugins: anyio-4.13.0
collected 4 items

tests\test_parser.py ..F.                                                                                                                                                                                                                                                                            [100%]

================================================================================================================================================ FAILURES ================================================================================================================================================= 
________________________________________________________________________________________________________________________________________ test_parsing_result_type _________________________________________________________________________________________________________________________________________ 

    def test_parsing_result_type():
        """Проверка логики структуры"""
        path = "data/schedule.xls"
        if os.path.exists(path):
            parser = ScheduleParser(path)
>           data = parser.parse()
                   ^^^^^^^^^^^^^^

tests\test_parser.py:27:
_ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ 

self = <src.parser.ScheduleParser object at 0x0000000004929E50>

    def parse(self):
        df = pd.read_excel(self.file_path, engine='xlrd', header=None)
        result = []

        days_list = ["Понедельник", "Вторник", "Среда", "Четверг", "Пятница", "Суббота"]
        current_day = "Неизвестно"

        # Поиск групп
        group_row_idx = 7
        for r in range(min(len(df), 20)):
>           row_str = " ".join(df.iloc[r].astype(str))
                      ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
E           TypeError: sequence item 0: expected str instance, float found

src\parser.py:17: TypeError
========================================================================================================================================= short test summary info ========================================================================================================================================= 
FAILED tests/test_parser.py::test_parsing_result_type - TypeError: sequence item 0: expected str instance, float found
======================================================================================================================================= 1 failed, 3 passed in 0.82s ======================================================================================================================================= 